--- a/stylus/components/bar.styl
+++ b/stylus/components/bar.styl
@@ -24,7 +24,13 @@
           margin: $buttonSpacingV $buttonSpacingH
         > .s-btn, input
           margin: 0
+        > .fa
+          display: inline-block
+          margin-right: 0
       &.s-right
         float: right
+        > li
+          > .fa
+            margin-left: 0
     a:not(.s-btn)
       color: $darkGrey
